--- a/Thesis/content/6_experiementresults.tex
+++ b/Thesis/content/6_experiementresults.tex
@@ -2,15 +2,6 @@
 \label{chap:results}
 
 
-\section{Grid search}
-\label{sec:gridsearch}
-best parameter for each dataset\\
-
-Epoches\\
-batch size\\
-window length\\
-hidden layer size
-
 \section{Anomaly detection performance}
 \label{sec:performance}
 
@@ -22,6 +13,15 @@ False alarm count, miss alarm count
 
 \subsection{Power demand example}
 \label{sec:example}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=15cm, height=4cm]{power_retraining}
+\caption[Retraining effect on Power Demand dataset]{Retraining effect on Power Demand dataset}
+\label{fig:power_retraining}
+\end{figure}
+
+
 
 \subsection{Comparasion: with and without retraining}
 \label{sec: compare}
