--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -18,6 +18,106 @@
     "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f_power = \"C:/Users/Bin/Desktop/Thesis/dataset/power_.csv\"\n",
+    "power = pd.read_csv(f_power,header=None)\n",
+    "label = power.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normal\n",
+      "normal\n",
+      "anomaly\n",
+      "anomaly\n",
+      "normal\n",
+      "anomaly\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "anomaly\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "normal\n",
+      "anomaly\n"
+     ]
+    }
+   ],
+   "source": [
+    "buffer = [label[i*84:(i+1)*84] for i in range(0,label.size//84)]\n",
+    "for buf in buffer:\n",
+    "    if \"anomaly\" in buf.tolist():\n",
+    "        print(\"anomaly\")\n",
+    "    else:\n",
+    "        print(\"normal\")"
    ]
   },
   {
@@ -343,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -354,10 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "smtp = pd.read_csv(f_smtp)"
@@ -416,27 +514,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(301,)"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bar = smtp_l[-10000:]\n",
-    "bar[bar!=\"normal\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "metadata": {
     "collapsed": true
@@ -444,6 +521,68 @@
    "outputs": [],
    "source": [
     "smtp.iloc[-10000:,:].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/smtp_validation.csv\",header = None,index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "foo = smtp.iloc[:,-1]\n",
+    "foo[foo!=\"normal\"] = \"anomaly\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c0441a25f8>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJztnX+wHtV5378PEpKwQAKsayIkgSCR\nHWs8dnA0GNvNmNZ4AtSDZjpuB03auIkbOpkQu4knGRh3qEszkzruQOyUOKZuateTmGLsGpXIxTah\nofUPyqX8lGShKxnQRQJdgZAQV9KVdJ/+8e773n3fd993z9k9u/vs7vczI913d8/uec7Zs88+e855\nniOqCkIIIc3irKoFIIQQEh4qd0IIaSBU7oQQ0kCo3AkhpIFQuRNCSAOhcieEkAZC5U4IIQ2Eyp0Q\nQhoIlTshhDSQxVVlvGrVKl2/fn1V2RNCSC15/PHHD6nqRFq6ypT7+vXrMTk5WVX2hBBSS0TkBZd0\n7JYhhJAGQuVOCCENhMqdEEIaCJU7IYQ0ECp3QghpIKnKXUT+UkQOisizI46LiHxRRKZE5GkReW94\nMQkhhPjgYrl/FcC1Y45fB2BD9O8mAF/KLxYhhJA8pCp3VX0EwGtjkmwG8F+1w08AnC8iq0MJaI3/\n9+JhbN9/pLe99an9uON7u3DH93bhgaf3VygZ8MOpQ/jZoTd728dOnsZ3nnhpZPoHnt6PI7OnnK8/\nd3oeX/67PZWXcxxn5hX3PrYPZ+ZHLx+577VZPPLcjNd1n3jxML72o+eRtCzloWMn8cWHduPRva96\nXVNV8c3JfTh5+ozXeXOn53Hv5L5EWQBg9ytveMviwv1PvoRjJ08P7T9w5Dge2vlK8Px2HjiKO763\nC5/duh0vvPrm0PEd+4/izu8/hxdfncWP9hzCnpljQfM/PncG33p8emQ9j+Lg0RP4wg924/EXxqnN\nYU6fmcdX/vde/PTlo17njSKEE9MaAPti29PRvgODCUXkJnSse1xyySUBsi6ff/TnPwIAPP/v/yEA\n4A/vewonTs0DAJYvWYSPvvviymT7ta882ifbZ/77M7j/yf24fGI53r32/L60L746i5v/+gl86O0T\n+NpvXul0/Wdeeh1//N2fAkCl5RzH13/8PD77P3bg+Kkz+PgH1iem+dDnH8a8LtSTC7/51cdwePYU\nrtl4Edacf07fsW3PHMAd338O71y9At/91K84X/P7O17BH9z3NKYOHsOt17/T+by7Hp7CFx7ajaWL\nz8LmX1ozdPwjdz4CwK98aTwzfQSfuudJ3PCei/HFLVf0Hdv8H3+Ig2+cDJofAPynR/bi25Fx8tUf\nPT90/S8/sgf3P7kfJ0/P4y/+bg+AsGX+o7/Zgb969EWsXrkMH/iFVc7nbX1qP+78wXN4ZPcF+NZv\nf8D5vB0HjuKP/mYn3rVmBR74Xfd2NIoQA6qSsC/xVaeqd6vqJlXdNDGR6j1bC+bngd+++ufxLz90\nOc4YW2z8wJETAIDZuWHL8ERkLe5//bjz9c7Mh5GrSF6LvkQOz86NTDPGqB/J4ei68wknd78S5jwt\n8KMnOlbwzLGTXucditJ3zy+DN+c6eb189MTQsYNv+MnvStrz1K33+YKeu1eOdsqV9LUyjq48pzwf\nmG55Xjrs/kyOI4RynwawLra9FoDd7/bAaOw9Zky3B8f387SJJFUBq6UY0uq1e9hau8wqTuhShFDu\nWwH8ejRr5ioAR1R1qEuGEEJIeaT2uYvINwBcDWCViEwD+DcAzgYAVf0LANsAXA9gCsAsgN8oSliL\nqHb6pQQS/M1rjaaXzwVNqAXWSzGk1muUwJjhnrk9hC5HqnJX1S0pxxXA7wSTiBBCSG4qC/nbFBSA\nSDSqbMyCCI01C6kKkvvcWTFFkFav3a8oa7WfvTmELQnDDxBCSAOhcg+AQBLngxJCSFVQueck/umY\nNNjWJJpePhdYA+WRVtdqdkA1m0ClD6iSdHp97oQQYgRa7jmJv2ytWRDBaXr5HEga5Gv8fa+KNCem\nruVurGE2yYmJEEKIMajcc0InpnaRVAfWLMeqCD0lNK1ee1MhG1L9octB5U4IIQ2Eyj0EIhBpvjNL\nw4vnBAOHjSZ0PaQGDjNa71n1QGj9QeVOCCENhFMhc9B903anQZozJMYIZNXqyU3hBRt9fd+cM1t4\nmc4KRImZu4b8LRr/+1pufqOg5U6c4cBhMqyVDlXVQ1O6QzkV0iAi3f+MMUYki+IGocKC+eYsGWWt\n9NY1td2Moewih8qPyj0HgwZDQwyIkTS9fC5wQHU0pU+F7Dkx2cJKPHcq9wAwbBghxBpU7jmIv2jb\noN6tWUhVQCem0YSuhXRL1qYTU/bwA5wKSQghJAUq9xz0pkLKwjheU0buk+gLb9zgco6Dfe6jCe7E\n5JiftS+nzPKwz50QQkgaVO456L5ou4HDgPZYcW0p5yAhrcS2fv240lYnplBQuRNnjLRZYpSqukes\nKNO8hC4Gww8EgCsxkSxkdWIi5VLXu0TLPQeJg2vli1EemvizVSQPqLa1NvoJXw1pTkzqkKp8uvL4\n1gedmAxCC4wQYg0q9xzE+xh7kSEbbMXFy9vkco6DUyHLw3VA1Vz9974o/ASjExMhhJBUqNxzELcY\nek5M1YhSCso+90Trqq11MUhVTkzW7gD73AkhhBQGp0IGoGO104mpDYQsd1vHLVxJqx86MY3HyXIX\nkWtFZJeITInILQnHLxGRh0XkCRF5WkSuDy8qqRorjdYarJcOdGLqx7tbJnD+qcpdRBYBuAvAdQA2\nAtgiIhsHkv1rAPeq6hUAbgTw54HlNEn35sXjuZsKYlTgGqqmyhmnwifdqiVZ18zT+9xttsG8z0aZ\na6heCWBKVfeq6hyAewBsTpBnRfR7JYD9geQjhrD5KFWP2RddyVSla43q+NIWTB+FS5/7GgD7YtvT\nAN43kOazAL4nIr8LYDmAa4JIVxNEYFPzcQ3VcrP2Tc81VGtBk9dQTcprUJVtAfBVVV0L4HoAXxeR\noWuLyE0iMikikzMzM/7SGqPPiakXz70iYUqgP557hYJUCJ2YRlP+SkzdfG3dgF6cec+GUXqfOzqW\n+rrY9loMd7t8AsC9AKCqPwawDMCqwQup6t2quklVN01MTGST2CAtNGYIIcZxUe6PAdggIpeJyBJ0\nBky3DqR5EcCHAUBE3omOcq+/aZ5CnxNTC1S8LfsoP1n6OMc5MTWtfnwJ3WfsvBKTsYrPLE7ZTkyq\nehrAzQAeBLATnVkx20XkdhG5IUr2aQC/JSJPAfgGgH+uVoeyCSGkBTg5ManqNgDbBvbdFvu9A8AH\nw4pmn95KTBIPHFaVNMXTF36gAeVU9R9/TSz3wmKentdqQCXGCN/nnubEVE7I36xOTP7z3Bk4jBBC\nSApU7jnoWhYS63G3NnJfFE0oZ5YSjDun/jVSL6x++Fh5NqjciQc2Gq01WCsd6MTUj3c8d0aFtENf\nn7vFee5Fhh+wVM44HoJlmi0z5pyy+tBbE34gbbEOs22w0tN7ULkTZ8w+TBXDeomoynI3+u3EeO6k\nOJo/9X6YGsVVYPiBetDk8ANkBElOTDZtiGGyWDs64nddCTWgWtaUPOuEtqDTrtc7bqziszq1VRF+\ngKSQ1QIjhJCioHLPQ9xy7w2oGjMjRpBFzH4npnqUcxx562Bwn38fa/3rME7wNVQdB1TtOTFp31/f\n80JB5U4IIQ2Eyj0H3T4/6dtXD/KvxFR/svURj5kK2YhasUOq5V6OGN5Y+SCjcifOUHklw1rpUFU9\nWO3eqnpA1SlwGEmmt4aqxGbL2GxnQ+Re57Em5RxHqD73PNcjo0lto0br24pYtNyJM1ReybBeOlRl\nQZutfjox1Zde+IGknRYo0sq0VM44BSuYsYHDSqoThh+IjhtthFbGs6jcA9GGme42H6Xqsapkyqa6\nPveKMk4hn5tgfqjcA2DWicmoWIVi9V4kwPAD9YDhB1pIvI+x58RUkf1SRn9nPI8mWKvBBlQzVoXV\nWR5ZCe7E5JifOSembjgKbycmz4xSoHIPQI2MRUJIS6Byz0H8RVv1GqplhxdtgtGZKXiagXjuraGe\nMyHNPBtU7oTkxMizXDlN7pLMQtVOTFTuOeg5MWFhcKyyGQPe6XM6MeU62waZ+twzHiP+pIb8NarU\nrUDlTpzhs5QMlUxEVV2S1WSbCldiqjE9yyI2olqZl15iLNpx6QvIzwI+a6gGvjydmAJnVds+dxtf\nxVTugWjDjJkmTH8sAqvvubKprBqM1r/v8xL6+aJyD4BZvW5WsAKp0VuWTkz1gE5MbST2opXhXaXi\nG/Mkb5eEUWPJiyyfz0nWlY45Fjr/qnARtTonpuriCY1Lzz73BlAjY5GQxlGjd2SpULnnoK9NSbXx\n3Mtev7MJD1SmIhgYUG0LaW3UanVbaQdU7i0g1GerlUZrjTbUi0sbqs6JqZJsU/E2uALnT+WegwUn\nJon1uVfUwL1H5svNzyJ0YrJNan1GN9BaW7Qij5NyF5FrRWSXiEyJyC0j0vwTEdkhIttF5K/Dikly\nEait2Wiy9rDyMBdKBQOqrli13H0JPcCeuoaqiCwCcBeAjwCYBvCYiGxV1R2xNBsA3Argg6p6WETe\nFlRKo3QfahHEp0xUI0vZI/NNeKCyWO7scy8NVycma9VupR24WO5XAphS1b2qOgfgHgCbB9L8FoC7\nVPUwAKjqwbBi2sfyjJlQba1OU/fKpA3V4lLEyqYBG63/qp8XF+W+BsC+2PZ0tC/O2wG8XUR+KCI/\nEZFrky4kIjeJyKSITM7MzGST2BDxwGG9fZVIMoKxwthwkQ6OV/iBMPPc40fLoDXhB9KO9xLYao1W\nPopdlHuSTTqY/2IAGwBcDWALgK+IyPlDJ6neraqbVHXTxMSEr6ymEcOue6EMCFuPECkTNycmzpaJ\n4+38VIET0zSAdbHttQD2J6S5X1VPqerPAOxCR9m3ArNdMlblKhKzNyMcDD/Qj1Hdnpkyww88BmCD\niFwmIksA3Ahg60Ca7wD4+wAgIqvQ6abZG0hGs8QbVW8N1ZYMqFq1lnwItoZqjuuRMaQ6MdmscCvt\nIFW5q+ppADcDeBDATgD3qup2EbldRG6Ikj0I4FUR2QHgYQB/oKqvFiW0NSx3yQABHwIjjdYaVQ+c\nlYGTE1Nlho3N+vd3Yip5KiQAqOo2ANsG9t0W+60Afj/61xrijYpOTPUjU/C0wNcjo3EPHGYNGxLR\nQ7UFhBtQtdFordGGWjFqHAOwK5t/lNCw+VO556B3MyRhX8mwz92fTCF/x5xjtXugrqQ6MRm13K00\nAyr3QFiepBHOiSnQhRpGG+rFyYmJfe59MJ57A7DgxJSY79iZHXRiqmufu2s+hSi9Up2Y0mbL2CT3\nV3EYMajcQ2F5xkyoh9zqw1Q1bRiLcGlDDPnbj7cTU+D8qdxz0As/EOuTqc5Lr+TZMlafKA8yFaFG\n89ytyeNLep97J0Hhy+xVPKUxK1TuobBruLPPvWDaUC+2+9yryTeNsldHG4TKPQBm9bpZwQrE8sh2\nIBh+oB+ryj0rZYYfICOIf371nJiqsl5803MqZPCokNa6qmxJ44+d6qx2vnpWqNwDYN5YpBNTobSi\nVhwKWd1MMat3oNxxsEGo3HMQf0NLxRq+roM+lRI6cFh2SQrB2peEL87hBwouZtULXWeFyr0FhFLk\nNdcVhdGGenELHFZVXCWbeFcHnZjs0Is+YCD8QNmTapug0DLNhLTgxeSIMXG8SXtZ9F44RVvuvumN\nVDyVeyAsd7tzJaaiaX7NOK3EVLwYI/K1Wf/+9hanQpqha1nEvVNNhfwtsH/Y6gPlFX4gS597xmMh\ncQ8/UGHmJWC3z91GaA8q90BYnjETrPFb+d40RhuqxW0N1eLlSMy3mmxT8fYaZ5+7PcwqdqtyFYnZ\nmxEOOjH1U/dZQYPQickA8SbFNVTrRyYnphrFczfbdeZIamyZcsTwr0cj1U7l3gKC9coEuk7TMKbT\nC8GtiJwKGafimZBU7nnoc2KKPqbqMxPSxqBPldR1QNWVur90UuO5d6NCmhtQtQGVewCq9k5NI1g8\ndyut1hh17/5wwSmeOwdU++BKTLVm+G7UJp577j53q4+UO6GdmBpQJaZw7nMvuOL9nZhsNAQq90BY\nNt7DzYS00Wit0YZqcSliXboky8J/AR06MZmhtxJTfF8lkozIt1AnJqN4OTFlst3HHPF9mLPRFiem\n1KxKc2Iq576GOr8LlXsLYPiBYmlDvdh2YrJ5B6qOSUPlnoPuvbAQOKzsJb2a0BWRabZMyD73oi1O\no0rPlfTAYd10xcvigxV5qNwDYX3GDCGkXVC5B0As+mQDscGAFk2FrOAlW3a9VNPaEgaYhlJUNVOs\nkmzTyTg/nuEHDNDvxNTbW4Ek5Q3mhbxCHQnpxFS0MjSr9BxJE7/nxFS0HHRiai/We2Q4oFosde/b\ndsH0gKrRt5i3VIHL4aTcReRaEdklIlMicsuYdB8TERWRTeFEtEvSQ82VmOpD6AFV78/wwgdUa46r\nE1PBeH8VG3k4UpW7iCwCcBeA6wBsBLBFRDYmpDsPwCcBPBpayDpg2XqnE1PBtKBanJyYajJTrCzK\nnh8/iIvlfiWAKVXdq6pzAO4BsDkh3b8D8CcATgSUzzTmnZjGps85FTLX2TbIFPLXgBOT8/Wtaj1H\n0vvcu+lsjV1YqXUX5b4GwL7Y9nS0r4eIXAFgnao+EFC2WmF2xgzsWjZNobLqLfHGuq2hytkycerg\nxJSktXpiiMhZAO4E8OnUC4ncJCKTIjI5MzPjLqURBi2hnuVu1YkppMNN4PMLo+g1VAPWadY6dA4/\nkO3yFVx0RFapTkw2Z8vkHs/Kd3oPF+U+DWBdbHstgP2x7fMAvAvA/xKR5wFcBWBr0qCqqt6tqptU\nddPExER2qQ1iuc+dENI+XJT7YwA2iMhlIrIEwI0AtnYPquoRVV2lqutVdT2AnwC4QVUnC5G4Qgbf\n4AufoZKwr1x8+4LzWq1NmP6XpQSJH0gZ51sXPe4R8uvKRdbQX3POfe7WQv52vyi8v+RKngqpqqcB\n3AzgQQA7AdyrqttF5HYRuSGoNDWGhjsh1VB/M6MYFrskUtVtALYN7LttRNqr84tVL0SM9kEHXrS7\nFtZ6FeEHSs6vW8Iy25wOf6TawWizzDp7iuEHKmDwViU9XKYGVMelLzk/i2T5DB53TtmrYaVnUPD1\nCyZ1JabeVMii5TB2Xx2hcg+AwPaAajgnpkAXahhtcLu37cRks2FyDdUa0aRFghnPPbzFV/KMOYfr\n1/smucpv7QPIyrNB5R4Mu6Z7KMvGSJs1R128knPl5WLY0Impj6pf9lTuHozqc48v1FFdA08aABiT\nPm9+VlV9jZyYsmolZyemIm5RFYO4I493p6AWLJT3eFaxU1xdoXIPhOU+d0JI+6By92CUE5OMSVMW\nZQze9DkxGTXc/cgwWybRIaxYC3zk+WmWbc7r+xLcicmxfMWHTs44W8a6ExNxg4Y7IdXQDEMjPFTu\nATDbJUMnplKozImpxDxdnJhq0DpKJevzQiemChi8WfW2GGotfBCCr8QEv0/rwrsT6t1AUykttkzJ\nDoKhoHIPgEj/jBlrhLK4G64rstMC5x23wGEVzRSrJNd06MRUI4YHVNPTlEXZDakJij5LEVxd4t2u\nVbDFWejVi8c5nrutmZBmng0q9wCI6XWY7DS2plKLsYicuK3EVA1W69/fiYmzZcyQZFlYjOeenL7c\n/CySqc895/GsabNQ95d6al1r/9/C5PC+vo2Kp3IPhOEu93CzZequLQqiLl1xRedVl7hKZVF1NEkq\ndw9G9rlzDVU7+MxWyeLElNYPXMJsGefwA0WoPUMvFPNOTJnzCwOVeyAsW+6EkPZB5e7BqHnufeEH\nyhOnj3H5Jhv1WaxWt/zqQqg+96z1Uvi4R8Cb5HapsK0irXwL9W5znrv/gGpYqNwDYXu+DCHNxWwX\nYcVQuQfArANTL/xAICemIFcpmOhelDrYWHLNVLOGasJn6lCacmQZyreabFPJ6nvC8AMVMHyzEqZC\nVuWlV/LIvNmZM0UPaNKJqTTSq6frxGSrHq08G1TuAZDefzYJ1dSMtFknyhS1DRarS14Wx5vqBJ2Y\nKmSw6j0XPyqUsgdvrD5QfgOaGQaV0wb5DNVMnV7GSVhxYvLNwEq1U7kHwrDhHqy1WVJcqZQaVKsa\nSlXelp2YDL/FqowSSuXuweCN6m5JLZ2Y8glq9Xny6/MOf/2i8wfoxNQ7PvC3MDl809OJqVmYnTFD\nCGklVO4ejOpzF+NuTMXEc7dpuvfCwBZ2/YR9mS3wnF9Pzk4++akmnnta+dQlWX4pMjoxZTk3JFTu\ngaDdTkg12DQzqofK3YOhwGHRDrN97mOO5XW9t97nXlQUw+RzNOV4uPx9zg95i6qI5+4eOKzgee7e\nPiSx9lBgPmlQuRNCao1RO6NyqNwDIDAaFbIbfiDU9aya6wmUOW2z7Gqpoqn1imgx/IDhZpllKmSp\n4QdE5FoR2SUiUyJyS8Lx3xeRHSLytIg8JCKXBpLPFoPdMulJSsPfiSnvYJ5N6uTEVLzvjdW75Iaz\nE1PRUSELvXpxpCp3EVkE4C4A1wHYCGCLiGwcSPYEgE2q+m4A9wH4k9CCmkZsR4UMthJTmMuUQrmB\nw6qhTOXt1udeTU1Yfof5GRthcbHcrwQwpap7VXUOwD0ANvcJpfqwqs5Gmz8BsDasmDYYFc89bV8Z\nZI1AV1Z+ZdEGJyYr1y8a11Wviv8CKjZ9Ubgo9zUA9sW2p6N9o/gEgO8mHRCRm0RkUkQmZ2Zm3KWs\nASb73B2oq9xNwvJXX5up+7PhotyTipj4bhKRfwpgE4DPJx1X1btVdZOqbpqYmHCX0gjDa6hGUyFj\nVVRZyN+kWzKmTzJL0KW+FYesmCcD+DgxZSlBshNTxqlvPVk9p9r18vU6LRe60JjGJQqcp+Pxguoh\nq49U/H5meb5CFWexQ5ppAOti22sB7B9MJCLXAPgMgA+p6skw4tWHmr/kCakttQpoVyIulvtjADaI\nyGUisgTAjQC2xhOIyBUAvgzgBlU9GF5MGww1oe7UJRmTpiS8nZiy5IFsFmqpeDkxuZVC+z9ZRmXp\ndc0Rl/LCdTZJCCw6Mfnc63xy+DoxxX57zZ4q2YlJVU8DuBnAgwB2ArhXVbeLyO0ickOU7PMAzgXw\nTRF5UkS2jrgcIYQExayhUTEu3TJQ1W0Atg3suy32+5rAcplkZMjf3n82Z8uk9RNnycNol3ssDGy6\ngK5F6LfE/I8XRbp7fjhpnMYwQve5p82WcUxXNlmfE8ZzJ4SQGLZUux2o3AMgIjans3VFCmQS1Ooh\nCtnfXF5WTvRua5k5O/jG04kpH1U4MZGIwYGz5IFKQ1Mhx6YvN7+yKHpAM6wTU7F1WHellz5gXE4B\n/eO555MrVLGo3AMgUl+Hh7rK3SRMfvWR2j8bVO4eDA6UjHMcKptxa6gmipTTicmo4e7pCOI/FTLJ\nWtSMI6pZA1+5OjGFvEUuDkMlL8RUWtgB7/uTdeJBN5xCoIqkcg9EzV/yhJCGQeXuwaATT9IYk0WD\nNtTYQB2cmHymx7kaSD4fLGWE/HX9OgnZJ12JE1Pa8ZIaoX+fe/y3f3sIVSwqd0IIaSBU7j709aUt\nvJM7A6oS7S9frLR8k/uJs2SS8/wS8FpD1fOao65bvtOKWyGD9rk7fQmFbRTpTkwlzZbJcUKm9sDZ\nMoQQQkZB5R4EsTltKvAaqkaN9UTCzhSxYUEO51tBXmOdmMggXpNlyg4cRhYYHFhL7O6gE1OleA1g\nZXFiynm8P222OnQeCLZ5i5yp74BqTiemXGcvQOUeAJH6ToU0+cXRMujEZJO6PxtU7h4MOzGNT1Mm\n3vHcs1itfc48/ueXgdeAqnM89/HnZF2hKmsdupex3KmQoT/mynTSGp9PHicm//ZAJyZj1P0tTwhp\nFlTuHvQ78SyY7hacmBLzHePs0lu/M+PUPaOGe4+Q8dxTr5OxXhZmvvmOl6jTeUFXYhr6kZQm8FTI\niuMP+HwF9p034rfreexzJ4QQMhIqdw9GBQ7rODB1nZgqmi0zJt9QTkx9FonRTveuXG597q7XHH9O\n1tXuPaOcDZ9WomEbMpyDe54px41+P2Ydm8r6pTAKKndCCGkgVO4eDL5Q44HDJLDDkC+++WaRsw59\n7kXMMx8aaxk8rslp06/b/zf0eWV/XAW33EvOb3Q+OXxIfCx3x7EUV6jcCSGkgVC5B8CsE1P3ayKQ\nhWO1jzOJMsPd5s0pq6xlWua9vBh+wAuvZyZwBVK5ezA4UDJu9aOy8X7Q82oGo0+y34BmAdfPOLU0\nqAw9UYzeJFesODFlHPAuK79RLA5zmXYjVgOHOVBXuQkpmro/G7TcPRgcOBvnHFQ+iXP0oj8Jg4Dd\nv5mdmGxahQuDUi5pXa+Zck5mJyZ3WZPPK9OJKX3aZvB47qnlK7YNZpypOjBl2P88OjEZo+YveUJI\nw6Byz0inz73rxNS/vyp5fI5Z6RcMjV/gMNdrjndKyerElNlpxdHEC2q5u9RnuOyc8rTa5x4/wc+n\nLeOnwgio3AkhpIFQuXsw6MQTf8FK4GmHvozLNnFsIIOgtQj52/ubLqC7E9P4c8w6MQW0bZ3GMJrq\nxORZj/197h7tYcwYWRao3AkhpIE4KXcRuVZEdonIlIjcknB8qYj8t+j4oyKyPrSgFujvW9WF8AOy\nsJpOZXNlfPvcs+SR8/wyKKbPffw5mWdH9GT1tAx7wdFKnC3jdK3As2WMfB7mmeeexe2itMBhIrII\nwF0ArgOwEcAWEdk4kOwTAA6r6i8AuBPA58KIRwghJAsulvuVAKZUda+qzgG4B8DmgTSbAXwt+n0f\ngA+L1N0FwB2zTkwOMpmUm9ilRe2l7s+GpH36iMjHAFyrqv8i2v5nAN6nqjfH0jwbpZmOtvdEaQ6N\nuu6Kde/Q9/3e3QGKUB6nzszj+VdnAQCXTyzH8bkzOHDkBLZ98lcwr4qP/tn/weqVy3Du0vIdf2fn\nzuCl148DADa87VwAwN5Db+LMvOKty5fgwuVL+tIfnj2FQ8dO9qVP4+AbJ3Hk+CkAqKycabxy9ASO\nnjiNFcsW46IVyxLT7D54DAD7YlevAAAGPElEQVSw5vxz8JYli1KveUYVe2feBIDEunzxtVmcPD0P\nALhs1XIsPstNKxw6dhKHZ0/h3KWLsXplsqxJvHzkBN44eRrnv+VsTJy7dOh4t3zrLjwHyxanl8+F\nw7NzOHRsDovOEly+anlifqHbxO6DxyCy0E0x2E67+cZxbcsu7H/9ON6cO4MLly/BWwfu+TheeG0W\nc1F7uHzVcixybA8zx07i9dnO8zWuHD/49NWPq+qmtOu53IkkyQbfCC5pICI3AbgJAFZcfDk2XBTu\nRpTFynPOxtLFi7DqvM7Nvvqcs/Hzb1sOVWDLlet6yq8Kli9dhItWLMN5yzq3dcNF5+KpfUfwnnUr\nE9M/te8I3r12pbOFsuGic7Fx9Qq89PrxSss5jrQyA8DaC87BC6/N4hd/7jzn677r4pU4PT8/Ms/3\nXnIBnn3pCObOJKfJKmuW8ybOW4rDs6dw2aq3eF03jVF5XvrW5Zg6+AY2XrwiaH7v+Lnz8BsfXI/P\nfXcXVpyzGEsWnzV0/JcvvQCTzx/GnpljmDhvaa/thyDP/fnlSy/E09Ov45RnexDpjN7NjzG6f+B4\nPRfL/f0APquqvxpt3woAqvrHsTQPRml+LCKLAbwMYELHXHzTpk06OTnpKCYhhBAAEBEny92lz/0x\nABtE5DIRWQLgRgBbB9JsBfDx6PfHAPztOMVOCCGkWFK/YVT1tIjcDOBBAIsA/KWqbheR2wFMqupW\nAP8ZwNdFZArAa+i8AAghhFSEUweVqm4DsG1g322x3ycA/OOwohFCCMkKPVQJIaSBULkTQkgDoXIn\nhJAGQuVOCCENhMqdEEIaSKoTU2EZi7wBYFclmdtmFYCRYRtaCutkGNZJMm2ol0tVdSItUZXBQXa5\neFm1DRGZZL30wzoZhnWSDOtlAXbLEEJIA6FyJ4SQBlKlcq9XvN/yYL0MwzoZhnWSDOslorIBVUII\nIcXBbhlCCGkglSj3tAW3m4qIrBORh0Vkp4hsF5FPRfsvFJHvi8ju6O8F0X4RkS9G9fS0iLy32hIU\nh4gsEpEnROSBaPuyaLH13dHi60ui/a1YjB0AROR8EblPRH4atZn3t72tiMjvRc/OsyLyDRFZxraS\nTOnK3XHB7aZyGsCnVfWdAK4C8DtR2W8B8JCqbgDwULQNdOpoQ/TvJgBfKl/k0vgUgJ2x7c8BuDOq\nk8PoLMIOtGsx9i8A+J+q+osA3oNO/bS2rYjIGgCfBLBJVd+FTgjyG8G2koyqlvoPwPsBPBjbvhXA\nrWXLYeEfgPsBfAQdZ67V0b7V6PgAAMCXAWyJpe+la9I/AGvRUVT/AMAD6CzbeAjA4sE2g866Au+P\nfi+O0knVZSigTlYA+Nlg2drcVgCsAbAPwIXRvX8AwK+2va2M+ldFt0z3BnWZjva1iugT8QoAjwK4\nSFUPAED0921RsrbU1Z8C+EMA3QUn3wrgdVU9HW3Hy92rk+j4kSh907gcwAyA/xJ1V31FRJajxW1F\nVV8C8B8AvAjgADr3/nGwrSRShXJ3Wky7yYjIuQC+BeBfqerRcUkT9jWqrkTkowAOqurj8d0JSdXh\nWJNYDOC9AL6kqlcAeBMLXTBJNL5eovGFzQAuA3AxgOXodEcN0ra2kkgVyn0awLrY9loA+yuQoxJE\n5Gx0FPtfqeq3o92viMjq6PhqAAej/W2oqw8CuEFEngdwDzpdM38K4PxosXWgv9y9OomOr0Rnacem\nMQ1gWlUfjbbvQ0fZt7mtXAPgZ6o6o6qnAHwbwAfAtpJIFcrdZcHtRiIigs56sztV9Y7YofgC4x9H\npy++u//Xo5kQVwE40v0kbwqqequqrlXV9ei0hb9V1V8D8DA6i60Dw3XS+MXYVfVlAPtE5B3Rrg8D\n2IEWtxV0umOuEpG3RM9St05a3VZGUtHAyPUAngOwB8Bnqh54KLHcfw+dz8KnATwZ/bsenX7AhwDs\njv5eGKUXdGYW7QHwDDqzBCovR4H1czWAB6LflwP4vwCmAHwTwNJo/7Joeyo6fnnVchdYH78EYDJq\nL98BcEHb2wqAfwvgpwCeBfB1AEvZVpL/0UOVEEIaCD1UCSGkgVC5E0JIA6FyJ4SQBkLlTgghDYTK\nnRBCGgiVOyGENBAqd0IIaSBU7oQQ0kD+P3U/BA6Q5XwXAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1c0441a2978>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "label = smtp.iloc[:,-1]\n",
+    "buffer = [label[i*100:(i+1)*100] for i in range(0,label.size//100)]\n",
+    "tmp = []\n",
+    "for buf in buffer:\n",
+    "    if \"anomaly\" in buf.tolist():\n",
+    "        #print(\"anomaly\")\n",
+    "        tmp.append(1)\n",
+    "    else:\n",
+    "        #print(\"normal\")\n",
+    "        tmp.append(0)\n",
+    "pd.Series(tmp).plot()"
    ]
   },
   {
