--- a/src/GridSearch/GridSearch Datasets.ipynb
+++ b/src/GridSearch/GridSearch Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,8 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "http = pd.read_csv(f_http,header=None)\n",
@@ -83,6 +85,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat((http[:303250],http[313200:]),axis=0).to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http_\",header=None,index=None)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +132,15 @@
     "n_train.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/smtp_gridsearch_train.csv\",header=None,index=None)\n",
     "n_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/smtp_gridsearch_test_n.csv\",header=None,index=None)\n",
     "a_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/smtp_gridsearch_test_a.csv\",header=None,index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat((smtp[:27000],smtp[32060:]),axis=0).to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/smtp_\",header=None,index=None)"
    ]
   },
   {
@@ -166,6 +186,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "forest[10000:].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_\",header=None,index=None)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -206,6 +237,17 @@
     "n_train.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_train.csv\",header=None,index=None)\n",
     "n_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_test_n.csv\",header=None,index=None)\n",
     "a_test.to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_gridsearch_test_a.csv\",header=None,index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "power[1150:].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/power_\",header=None,index=None)"
    ]
   },
   {
